made it look like etchasketch

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <!--Google Fonts-->
   <link href='https://fonts.googleapis.com/css?family=Indie Flower' rel='stylesheet'>
 
+  <!-- Font Awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!--My CSS-->
-  <link rel="stylesheet" type="text/css" href="etch.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
   <!--Include jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -47,20 +50,23 @@
  
   <form id="colorform" class="right">
     <label for="color">Color:</label>
-    <input type="text" value="#aaddcc" name="color"
+    <input type="text" value="#666666" name="color"
            id="colorText">
 
     <label id="lblcolor">&nbsp;
-        <input type="color" value="#aaddcc" 
+        <input type="color" value="#666666" 
                id="colorChoice">
     </label>
   </form>
 </section>
 
-
+  <div id="circle1">&nbsp;</div>
+  <div id="circle2">&nbsp;</div>
 
 <footer>
-  <small></small>
+    <small><a href="https://RainDropsz.github.io">See My Other Work</a> | 
+       <a href="mailto:raindropsz100@gmail.com"><i class="fa fa-envelope"></i> Email Me</a>
+    </small>
 </footer>
 
   <script src="etch.js"></script>
