used negative margin. Abs position didn't show right on mobile chrome.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
   </form>
 </section>
 
+<div id="circlerow">
   <div id="circle1">&nbsp;</div>
   <div id="circle2">&nbsp;</div>
-
+</div>
 <footer>
     <small><a href="https://RainDropsz.github.io">See My Other Work</a> | 
        <a href="mailto:raindropsz100@gmail.com"><i class="fa fa-envelope"></i> Email Me</a>
